# logcat-mini

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  logcat  main.c
